@@ -2,19 +2,14 @@ package com.example.quizexam_student.service.impl;
 
 import com.example.quizexam_student.bean.request.QuestionRequest;
 import com.example.quizexam_student.bean.response.QuestionResponse;
-import com.example.quizexam_student.entity.Answer;
-import com.example.quizexam_student.entity.Chapter;
-import com.example.quizexam_student.entity.Question;
-import com.example.quizexam_student.exception.InvalidQuantityException;
-import com.example.quizexam_student.exception.NotFoundException;
-import com.example.quizexam_student.mapper.AnswerMapper;
-import com.example.quizexam_student.mapper.QuestionMapper;
+import com.example.quizexam_student.entity.*;
+import com.example.quizexam_student.exception.*;
+import com.example.quizexam_student.mapper.*;
 import com.example.quizexam_student.repository.*;
 import com.example.quizexam_student.service.QuestionService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
@@ -45,17 +40,16 @@ public class QuestionServiceImpl implements QuestionService {
     }
 
     @Override
-    public List<Question> saveQuestions(List<QuestionRequest> questionRequests) throws IOException {
+    public List<Question> saveQuestions(List<QuestionRequest> questionRequests){
         List<Question> savedQuestions = new ArrayList<>();
         for (QuestionRequest questionRequest : questionRequests) {
             Question question = QuestionMapper.convertFromRequest(questionRequest);
             question.setStatus(1);
             question.setSubject(subjectRepository.findById(questionRequest.getSubjectId()).orElse(null));
             question.setLevel(levelRepository.findById(questionRequest.getLevelId()).orElse(null));
-            question.setChapters(chapterRepository.findByIdIn(questionRequest.getChapters()).stream().collect(Collectors.toSet()));
-            List<Answer> answers = questionRequest.getAnswers().stream().map(AnswerMapper::convertFromRequest).collect(Collectors.toList());
-            answers.stream().map(answer -> {answer.setQuestion(question); return answer;}).collect(Collectors.toList());
-            question.setAnswers(answers.stream().collect(Collectors.toSet()));
+            question.setChapters(new HashSet<>(chapterRepository.findByIdIn(questionRequest.getChapters())));
+            List<Answer> answers = questionRequest.getAnswers().stream().map(AnswerMapper::convertFromRequest).toList();
+            question.setAnswers(new HashSet<>(answers.stream().peek(answer -> answer.setQuestion(question)).toList()));
             questionRepository.save(question);
             savedQuestions.add(question);
         }
@@ -63,17 +57,18 @@ public class QuestionServiceImpl implements QuestionService {
     }
 
     @Override
-    public Question updateQuestion(int id, QuestionRequest questionRequest) throws IOException {
+    public Question updateQuestion(int id, QuestionRequest questionRequest){
         Question question = questionRepository.findById(id).orElse(null);
+        assert question != null;
         question.setContent(questionRequest.getContent());
         if (questionRequest.getImage() != null) {
             question.setImage(questionRequest.getImage().isEmpty() ? null : questionRequest.getImage());
         }
         question.setSubject(subjectRepository.findById(questionRequest.getSubjectId()).orElse(null));
         question.setLevel(levelRepository.findById(questionRequest.getLevelId()).orElse(null));
-        question.setChapters(chapterRepository.findByIdIn(questionRequest.getChapters()).stream().collect(Collectors.toSet()));
+        question.setChapters(new HashSet<>(chapterRepository.findByIdIn(questionRequest.getChapters())));
         List<Answer> answers = questionRequest.getAnswers().stream().map(AnswerMapper::convertFromRequest).collect(Collectors.toList());
-        answers.stream().map(answer -> {answer.setQuestion(question); return answer;}).collect(Collectors.toList());
+        answers = answers.stream().peek(answer -> answer.setQuestion(question)).collect(Collectors.toList());
 
         if (answers.size() < 4) {
             throw new InvalidQuantityException("question", "Must have at least 4 answers.");
@@ -88,8 +83,7 @@ public class QuestionServiceImpl implements QuestionService {
         question.setAnswers(new HashSet<>());
         questionRepository.save(question);
         List<Answer> questionAnswers = answerRepository.findByQuestion(question);
-        questionAnswers.stream().map(answer -> {answer.setQuestion(null); return answer;}).collect(Collectors.toList());
-        answerRepository.deleteAll(questionAnswers);
+        answerRepository.deleteAll(questionAnswers.stream().peek(answer -> answer.setQuestion(null)).toList());
         answerRepository.saveAll(answers);
         return question;
     }
