@@ -1,24 +1,17 @@
 package com.example.quizexam_student.service.impl;
 
-import com.example.quizexam_student.bean.request.StudentRequest;
-import com.example.quizexam_student.bean.request.UserRequest;
-import com.example.quizexam_student.bean.response.StudentResponse;
-import com.example.quizexam_student.bean.response.UserResponse;
+import com.example.quizexam_student.bean.request.*;
+import com.example.quizexam_student.bean.response.*;
 import com.example.quizexam_student.entity.*;
-import com.example.quizexam_student.exception.AlreadyExistException;
-import com.example.quizexam_student.exception.EmptyException;
-import com.example.quizexam_student.exception.NotFoundException;
-import com.example.quizexam_student.mapper.StudentMapper;
-import com.example.quizexam_student.mapper.UserMapper;
+import com.example.quizexam_student.exception.*;
+import com.example.quizexam_student.mapper.*;
 import com.example.quizexam_student.repository.*;
-import com.example.quizexam_student.service.StudentService;
-import com.example.quizexam_student.service.UserService;
+import com.example.quizexam_student.service.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -45,7 +38,7 @@ public class StudentServiceImpl implements StudentService {
     @Override
     public List<StudentResponse> getAllStudentsNoneClass() {
         Role role = roleRepository.findByName("STUDENT");
-        List<UserResponse> userResponses = userRepository.findByRole(role).stream().map(UserMapper::convertToResponse).collect(Collectors.toList());
+        List<UserResponse> userResponses = userRepository.findByRole(role).stream().map(UserMapper::convertToResponse).toList();
         List<StudentResponse> studentResponses = userResponses.stream().map(userResponse -> StudentMapper.convertToResponse(userResponse, studentRepository.findByUser(userRepository.findById(userResponse.getId()).orElse(null)))).collect(Collectors.toList());
         studentResponses.removeIf(std->std.get_class()!=null);
         return studentResponses;
@@ -54,7 +47,7 @@ public class StudentServiceImpl implements StudentService {
     @Override
     public List<StudentResponse> getAllStudentsByClass(int classId) {
         Role role = roleRepository.findByName("STUDENT");
-        List<UserResponse> userResponses = userRepository.findByRole(role).stream().map(UserMapper::convertToResponse).collect(Collectors.toList());
+        List<UserResponse> userResponses = userRepository.findByRole(role).stream().map(UserMapper::convertToResponse).toList();
         List<StudentResponse> studentResponses = userResponses.stream().map(userResponse -> StudentMapper.convertToResponse(userResponse, studentRepository.findByUser(userRepository.findById(userResponse.getId()).orElse(null)))).collect(Collectors.toList());
         studentResponses.removeIf(std->std.get_class()==null||std.get_class().getId()!=classId);
         return studentResponses;
@@ -130,33 +123,33 @@ public class StudentServiceImpl implements StudentService {
         studentRepository.saveAll(students);
     }
 
-    public User addUser(UserRequest userRequest) {
-        if (userRepository.existsByEmail(userRequest.getEmail())) {
-            throw new AlreadyExistException("email", "Email already exists.");
-        }
-        if (userRepository.existsByPhoneNumber(userRequest.getPhoneNumber())) {
-            throw new AlreadyExistException("phoneNumber", "Phone Number already exists.");
-        }
-        User user = new User();
-        user.setEmail(userRequest.getEmail());
-        user.setPassword(passwordEncoder.encode("@1234567"));
-        user.setDob(userRequest.getDob());
-        user.setGender(userRequest.getGender());
-        user.setFullName(userRequest.getFullName());
-        user.setAddress(userRequest.getAddress());
-        user.setPhoneNumber(userRequest.getPhoneNumber());
-        Role role = roleRepository.findById(5).orElse(null);
-        user.setRole(role);
-        user.setStatus(1);
-        return userRepository.save(user);
-    }
+//    public User addUser(UserRequest userRequest) {
+//        if (userRepository.existsByEmail(userRequest.getEmail())) {
+//            throw new AlreadyExistException("email", "Email already exists.");
+//        }
+//        if (userRepository.existsByPhoneNumber(userRequest.getPhoneNumber())) {
+//            throw new AlreadyExistException("phoneNumber", "Phone Number already exists.");
+//        }
+//        User user = new User();
+//        user.setEmail(userRequest.getEmail());
+//        user.setPassword(passwordEncoder.encode("@1234567"));
+//        user.setDob(userRequest.getDob());
+//        user.setGender(userRequest.getGender());
+//        user.setFullName(userRequest.getFullName());
+//        user.setAddress(userRequest.getAddress());
+//        user.setPhoneNumber(userRequest.getPhoneNumber());
+//        Role role = roleRepository.findById(5).orElse(null);
+//        user.setRole(role);
+//        user.setStatus(1);
+//        return userRepository.save(user);
+//    }
 
-    public void setUser(User userUpdate, UserRequest userInput) {
-        userUpdate.setEmail(userInput.getEmail());
-        userUpdate.setDob(userInput.getDob());
-        userUpdate.setGender(userInput.getGender());
-        userUpdate.setFullName(userInput.getFullName());
-        userUpdate.setAddress(userInput.getAddress());
-        userUpdate.setPhoneNumber(userInput.getPhoneNumber());
-    }
+//    public void setUser(User userUpdate, UserRequest userInput) {
+//        userUpdate.setEmail(userInput.getEmail());
+//        userUpdate.setDob(userInput.getDob());
+//        userUpdate.setGender(userInput.getGender());
+//        userUpdate.setFullName(userInput.getFullName());
+//        userUpdate.setAddress(userInput.getAddress());
+//        userUpdate.setPhoneNumber(userInput.getPhoneNumber());
+//    }
 }
